@@ -1,3 +1,7 @@
+## New Changes
+
+- Change row marking in model_log visualization to alternate between colors
+
 ## Version 1.1.0
 
 - Improve rendering performance of output HTML file
